# TypeART

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  a.out  test.cpp
.github/workflows/: basic-ci.yml
bench/: bench.py
bench/templates/: heap_mt.cpp.jinja  heap_mt_loop.cpp.jinja  heap_st.cpp.jinja  stack_mt.cpp.jinja  stack_st.cpp.jinja  stack_st_loop.cpp.jinja
cmake/: typeartToolchainOptions.cmake
demo/: tool.c  toy.c
include/typeart/: TypeART.h  TypeART.hpp
include/typeart/common/: Types.h  Types.hpp
include/typeart/db/: Database.hpp  LLVMMetadataConverter.hpp  Macros.hpp  Types.h  Types.hpp
include/typeart/meta/: Cache.hpp  Database.hpp  LLVMMetadataConverter.hpp  Macros.hpp  Meta.hpp
include/typeart/runtime/: AccessCounter.hpp  Runtime.h  Runtime.hpp  TypeResolution.hpp
include/typeart/support/: Logger.hpp
include/typeart/typelib/: TypeDB.hpp  TypeDatabase.hpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  Types.cpp
lib/db/: CMakeLists.txt  Database.cpp  LLVMMetadataConverter.cpp  Types.cpp  YAML.cpp
lib/meta/: CMakeLists.txt  Cache.cpp  Database.cpp  LLVMMetadataConverter.cpp  Meta.cpp  YAML.cpp
lib/mpi_interceptor/: CMakeLists.txt  Config.cpp  Error.h  InterceptorFunctions.cpp  Logger.cpp  Logger.h  TypeCheck.cpp  TypeCheck.h  Util.cpp  Util.h
lib/passes/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  TypeARTPass.cpp  TypeARTPass.h
lib/passes/analysis/: CMakeLists.txt  DebugInfoFinder.cpp  DebugInfoFinder.hpp  MemInstFinder.cpp  MemOpData.h  MemOpVisitor.cpp
lib/passes/filter/: CGForwardFilter.cpp  CGInterface.cpp  CMakeLists.txt  FilterBase.h  FilterUtil.h  IRPath.h  Matcher.h  OmpUtil.h  StdForwardFilter.cpp
lib/passes/instrumentation/: TypeARTInstrumentation.cpp  TypeARTInstrumentation.h
lib/passes/instrumentation/allocator/: ArgumentParser.cpp  ArgumentParser.h  InstrumentationStrategy.cpp  InstrumentationStrategy.h
lib/passes/instrumentation/common/: InstrumentationHelper.cpp  InstrumentationHelper.h  TypeARTFunctions.cpp  TypeARTFunctions.h
lib/passes/instrumentation/hybrid/: ArgumentParser.cpp  ArgumentParser.h  InstrumentationStrategy.cpp  InstrumentationStrategy.h
lib/passes/instrumentation/tracker/: ArgumentParser.cpp  ArgumentParser.h  InstrumentationStrategy.cpp  InstrumentationStrategy.h  TransformUtil.h
lib/passes/support/: DefUseChain.h  Error.h  OmpUtil.h  TypeUtil.cpp  Util.h
lib/passes/typegen/: CMakeLists.txt  StructTypeHandler.cpp  StructTypeHandler.h  TypeGenerator.h  TypeManager.cpp  TypeManager.h  VectorTypeHandler.cpp  VectorTypeHandler.h
lib/preload/: CMakeLists.txt  Lib.S  Lib.c  Lib.cpp
lib/runtime/: AccessCountPrinter.h  AccessCounter.h  AllocMapWrapper.h  AllocationTracking.cpp  CMakeLists.txt  CallbackInterface.h  Internals.hpp  Runtime.cpp  Runtime.h  RuntimeData.h  RuntimeInterface.cpp  RuntimeInterface.h  TypeResolution.cpp  TypeResolution.h  TypeResolution.hpp  Version.cpp.in
lib/runtime/allocator/: Allocator.S  Allocator.cpp  Allocator.h  Allocator.hpp  CallbackInterface.cpp  CallbackInterface.h  Config.h  Malloc.cpp  create_constants.py
lib/runtime/tracker/: AllocMapWrapper.h  AllocMapWrapper.hpp  AllocationTracking.cpp  CallbackInterface.cpp  CallbackInterface.h  Tracker.cpp  Tracker.h  Tracker.hpp  Types.h  Types.hpp
lib/support/: CMakeLists.txt  Logger.cpp  Logger.hpp  System.cpp  Table.h
lib/typelib/: CMakeLists.txt  TypeDB.cpp  TypeDB.h  TypeDatabase.cpp  TypeDatabase.h  TypeIO.cpp  TypeInterface.h
scripts/: CMakeLists.txt  typeart-tmpl.sh.in  typeart-wrapper.in
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  struct_defs.h
test/mpi_typecheck/: 01_0_env_args.sh  01_1_env_args.sh  01_2_env_args.sh  01_3_env_args.sh  01_MPI_Double.cpp  02_MPI_Type_contiguous.cpp  03_MPI_Type_contiguous_recursive.cpp  04_MPI_Type_dup.cpp  05_MPI_Type_vector.cpp  06_MPI_Type_struct.cpp  07_struct_ambiguous_type.cpp  08_MPI_Type_create_subarray.cpp  09_MPI_Type_create_indexed_block.cpp  10_null_count.cpp  11_null_buffer.cpp  14_MPI_Char.cpp  16_104_milc.cpp  17_Source_Location_error.cpp  18_Source_Location_all.cpp  19_Stacktrace.cpp
test/pass/filter/: 00_ignore_ta_memops_allocator.c  00_ignore_ta_memops_tracker.c  01_alloca.llin  08_amg_box_algebra_mock.c  10_omp_empty.c  12_omp_correlate.c  13_omp_loops.c  14_omp_nested.c  15_omp_task.c  16_omp_reduction.c  17_omp_sharing_semantics.c  18_omp_last_priv_nested.c  19_omp_first_priv_nested.c  20_omp_priv_combi_nested.c  21_omp_task_struct.c  22_omp_ident_offset.llin
test/pass/global/: 01_globals.c  02_globals.cpp  03_milc_setup_readin_mock.llin  04_const_char.c  05_asan.c  06_coverage.c  07_coverage_llvm.c  08_global_skip.c
test/pass/misc/: 03_make_mismatch_callback.c  04_make_callback_match.c  05_make_all_callbacks.c  06_unknown_type.llin
test/runtime/: 01_malloc_trace.c  13_alloca_vla.c  21_runtime_manual.cpp  23_threads_heap.cpp  41_array_cookie.cpp  42_runtime_typeid.c  51_stack_lifetime.c
test/runtime/allocator/: 01_pthread_join.cpp  02_pthread_exit.cpp  03_pthread_cancellation.cpp
test/runtime/tracker/: 01_malloc_trace.c  02_malloc_unsigned_trace.c  03_new_trace.cpp  04_alloca_trace.c  05_alloca_unsigned_trace.c  06_simple_array_type_check.cpp  07_simple_struct_type_check.c  07_simple_struct_type_check.cpp  08_recursive_struct_type_check.c  08_recursive_struct_type_check.cpp  10_vector_fill_demo.c  10_vector_fill_demo.cpp  11_matrix_mult_demo.c  12_alloc_multi.c  13_alloca_vla.c  14_alloca_vector.c  15_malloc_zero.c  16_inv_struct.cpp  17_inv_array.cpp  18_softcounter_empty.c  19_softcounter.c  20_softcounter_max.c  21_runtime_manual.cpp  22_threads_stack.cpp  23_threads_heap.cpp  24_threads_type_check.cpp  25_omp_stack.c  26_omp_heap.c  27_omp_softcounter.c  28_omp_softcounter_stack.c  30_omp_concurrent_w.cpp  (+29 more)
test/script/: 03_wrapper_cxx.cpp  04_wrapper_cc.c  05_wrapper_mpicxx.cpp  06_wrapper_mpicc.c  07_wrapper_demo.sh  08_wrapper_demo_cmake.sh  09_wrapper_single_tu.c  09_wrapper_single_tu.c.o.d  10_wrapper_asm.c  a.out
test/typemapping/: 01_simple_struct.c  02_recursive_struct.c  03_typedatabase.cpp
(+46 files in other folders)
